[gd_scene load_steps=2 format=3 uid="uid://b36x56d1bv0as"]

[ext_resource type="Script" uid="uid://c675m6dp5ga35" path="res://scenes/control/battle_hud/hud.gd" id="1_lg3vq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_lg3vq")

[node name="ActionTimelineVbox" type="VBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="BottomPanel" type="ColorRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -104.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.724643, 0.724643, 0.724643, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CharacterName" type="Label" parent="BottomPanel/HBoxContainer"]
layout_mode = 2
text = "test"
